--- a/joine-generator/src/main/resources/vm/java/Controller.java.vm
+++ b/joine-generator/src/main/resources/vm/java/Controller.java.vm
@@ -3,7 +3,6 @@ package ${basePackage}.web.controller.${moduleName};
 import java.util.List;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Controller;
 import org.springframework.ui.ModelMap;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -16,7 +15,7 @@ import ${package}.domain.${className};
 import ${package}.service.I${className}Service;
 import com.github.joine.common.core.controller.BaseController;
 import com.github.joine.common.core.page.TableDataInfo;
-import com.github.joine.common.core.domain.AjaxResult;
+import com.github.joine.common.core.domain.ResponseResult;
 import com.github.joine.common.utils.poi.ExcelUtil;
 
 /**
@@ -59,7 +58,7 @@ public class ${className}Controller extends BaseController {
 	@RequiresPermissions("${moduleName}:${classname}:export")
     @PostMapping("/export")
     @ResponseBody
-    public AjaxResult export(${className} ${classname}) {
+    public ResponseResult export(${className} ${classname}) {
     	List<${className}> list = ${classname}Service.select${className}List(${classname});
         ExcelUtil<${className}> util = new ExcelUtil<${className}>(${className}.class);
         return util.exportExcel(list, "${classname}");
@@ -80,7 +79,7 @@ public class ${className}Controller extends BaseController {
 	@Log(title = "${tableComment}", businessType = BusinessType.INSERT)
 	@PostMapping("/add")
 	@ResponseBody
-	public AjaxResult addSave(${className} ${classname}) {
+	public ResponseResult addSave(${className} ${classname}) {
 		return toAjax(${classname}Service.insert${className}(${classname}));
 	}
 
@@ -101,7 +100,7 @@ public class ${className}Controller extends BaseController {
 	@Log(title = "${tableComment}", businessType = BusinessType.UPDATE)
 	@PostMapping("/edit")
 	@ResponseBody
-	public AjaxResult editSave(${className} ${classname}) {
+	public ResponseResult editSave(${className} ${classname}) {
 		return toAjax(${classname}Service.update${className}(${classname}));
 	}
 	
@@ -112,7 +111,7 @@ public class ${className}Controller extends BaseController {
 	@Log(title = "${tableComment}", businessType = BusinessType.DELETE)
 	@PostMapping( "/remove")
 	@ResponseBody
-	public AjaxResult remove(String ids) {
+	public ResponseResult remove(String ids) {
 		return toAjax(${classname}Service.delete${className}ByIds(ids));
 	}
 	
